@@ -979,8 +979,9 @@ else:
 
 zipDependencies += executables
 zipDependencies += pluginLibraries
-    
-if not commonEnvironment['generateZip']:    
+  
+print   commonEnvironment['generateZip']
+if not (commonEnvironment['generateZip']==1):    
     print 'CONFIGURATION DECISION: Not compiling zip file for release.'
 else:
     print 'CONFIGURATION DECISION: Compiling zip file for release.'
